--- a/style.css
+++ b/style.css
@@ -1,9 +1,33 @@
 .tag {
-    font-size: 18px;
+    font-size: 20px;
+    background-color: aqua;
+    border-radius: 10px;
+    color: black;
+    padding: 10px;
 }
 .heading {
     font-size: 25px;
 }
 body {
     background-size: cover;
+}
+canvas {
+    background-color: white;
+    border-color: blueviolet;
+    box-shadow: 5px 5px 5px cyan;
+    margin-top: 10px;
+}
+.note {
+    font-size: 20px;
+    color: black;
+}
+.copyrightFooter {
+    position: fixed;
+    color: violet;
+    bottom: 0;
+    width: 100%;
+    background-color: blue;
+    line-height: 2;
+    text-align: center;
+    font-size: 20px;
 }
